--- a/index.html
+++ b/index.html
@@ -14,34 +14,10 @@
     <title>EcoKart — a small eco-friendly products store</title>
 </head>
 <body class="bg-slate-50 text-slate-800">
-  <div id="app" class="max-w-6xl mx-auto">
-    <!-- Navbar -->
-    <!-- <header class="fixed top-0 left-0 w-full z-50 bg-white/80 backdrop-blur-md shadow-md flex items-center justify-between py-4 px-4 md:px-6 bg-white shadow-sm sticky top-0 z-50">
-      <a href="#/" class="flex items-center gap-3">
-        <div class="text-2xl font-extrabold bg-gradient-to-r from-green-500 via-cyan-500 to-blue-500 bg-clip-text text-transparent tracking-wide cursor-pointer">EK</div>
-        <div>
-          <div class="text-lg font-semibold">EcoKart</div>
-          <div class="text-xs text-slate-500">Eco-friendly store</div>
-        </div>
-      </a>
-
-      <div class="flex-1 px-4 md:px-8">
-        <div class="relative">
-          <input id="searchInput" type="search" placeholder="Search products..." class="w-full rounded-full border px-4 py-2 shadow-sm focus:outline-none focus:ring-2 focus:ring-green-200" />
-          <button id="searchBtn" class="absolute right-1 top-1/2 -translate-y-1/2 bg-green-600 text-white px-3 py-1 rounded-full text-sm">Search</button>
-        </div>
-      </div>
-
-      <div class="flex items-center gap-4">
-        <button id="cartBtn" class="relative">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-slate-700" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.2 6.3A1 1 0 0 0 6.8 21h10.4a1 1 0 0 0 .98-.76L20 13M7 13l10 0"/></svg>
-          <span id="cartCount" class="absolute -right-2 -top-2 bg-red-500 text-white rounded-full px-2 text-xs">0</span>
-        </button>
-        <a href="#/checkout" class="bg-gradient-to-r from-green-500 to-cyan-500 text-white px-4 py-2 rounded-md hidden md:inline">Checkout</a>
-      </div>
-    </header> -->
-    <header class="fixed top-0 left-0 w-full z-50 bg-white/80 backdrop-blur-md shadow-md flex items-center justify-between py-4 px-4 md:px-6 bg-white shadow-sm sticky top-0 z-50">
-  <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-4 md:px-6">
+  <div id="app" class="mx-auto ">
+  <!-- Navbar -->
+  <header class="fixed top-0 left-0 w-full z-50 bg-white/80 backdrop-blur-md shadow-md flex items-center justify-between py-2 px-4 md:px-6 bg-white shadow-sm sticky top-0 z-50">
+  <div class="w-full flex items-center justify-between py-3 px-4 md:px-6">
     
     <!-- Logo -->
     <a href="#/" class="flex items-center gap-3 group">
@@ -56,7 +32,7 @@
 
     <!-- Search Bar -->
     <div class="flex-1 px-4 md:px-8 hidden sm:block">
-      <div class="relative">
+      <div class="relative max-w-xl mx-auto">
         <input id="searchInput" type="search" placeholder="Search eco-products..." 
           class="w-full rounded-full border border-slate-300 px-4 py-2 shadow-sm focus:outline-none focus:ring-2 focus:ring-green-300 transition" />
         <button id="searchBtn" 
@@ -69,8 +45,9 @@
     <!-- Actions -->
     <div class="flex items-center gap-4">
       <!-- Wishlist -->
-      <a href="#/wishlist"  class="hidden md:inline-flex items-center justify-center w-10 h-10 rounded-full hover:bg-green-50 transition">
+      <a href="#/wishlist"  class="relative hidden md:inline-flex items-center justify-center w-10 h-10 rounded-full hover:bg-green-50 transition">
         <i class="fa-regular fa-heart text-slate-700 text-lg"></i>
+        <span id="wishlistCount" class="absolute -right-1 -top-1 bg-red-500 text-white rounded-full px-2 text-xs shadow">0</span>
       </a>
 
       <!-- User -->
@@ -96,11 +73,12 @@
 
 
     <!-- Page container -->
-    <main id="page" class="page p-4 md:p-6"></main>
+    <main id="page" class="page p-4 md:p-6 w-full"></main>
 
      <!-- Footer -->
-    <footer class="relative w-full bg-gradient-to-r from-green-50 via-cyan-50 to-blue-50 pt-14 pb-8 mt-20 border-t border-slate-200">
-  <div class="w-full px-8 mx-auto max-w-7xl">
+    <footer class="relative w-full bg-gradient-to-r from-green-50 via-cyan-50 to-blue-50 pt-14 pb-4 mt-20 mb-0 border-t border-slate-200">
+  <div class="w-full px-8 ">
+
     
     <!-- Top Section -->
     <div class="grid grid-cols-1 md:grid-cols-4 gap-10">
@@ -187,7 +165,7 @@
   <script src="js/checkout.js"></script>
   <script src="js/thanks.js"></script>
   <script src="js/notfound.js"></script>
-  <script src="js/app.js"></script>
   <script src="js/wishlist.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
