--- a/index.html
+++ b/index.html
@@ -140,18 +140,18 @@
     <div class="border-t border-slate-200 my-8"></div>
 
     <!-- Bottom Section -->
-    <div class="flex flex-col md:flex-row items-center justify-between text-sm text-slate-500">
+    <div class="flex flex-col md:flex-row items-center justify-center text-sm text-slate-500">
       <p class="mb-4 md:mb-0">© <span id="year"></span> <span class="font-semibold text-slate-700">EcoKart</span>. All rights reserved.</p>
       
       <!-- Newsletter -->
-      <form class="flex w-full md:w-auto">
+      <!-- <form class="flex w-full md:w-auto">
         <input type="email" placeholder="Subscribe to newsletter" 
                class="w-full md:w-64 px-4 py-2 text-sm border border-slate-300 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-green-400" />
         <button type="submit" 
                 class="px-5 py-2 bg-gradient-to-r from-green-500 to-cyan-500 text-white text-sm rounded-r-lg shadow hover:shadow-md transition">
           Subscribe
         </button>
-      </form>
+      </form> -->
     </div>
   </div>
     </footer>
